@@ -18,6 +18,8 @@ DETAILED CHANGES:
 	- ADDED: ColorIsEqual and ColorLerp.
 	- ADDED: TextToSnake and TextToCamel.
 	- ADDED: DrawModelPoints, DrawModelPointsEx, ExportMeshAsCode and UpdateModelAnimationBones.
+	- ADDED: rlSetClipPlanes, rlGetCullDistanceNear, rlGetCullDistanceFar, rlGetActiveFramebuffer,
+	rlBindFramebuffer, rlColorMask and rlSetUniformMatrices.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
